included the inference time calculation

--- a/Swin/swinmetricsovertime.ipynb
+++ b/Swin/swinmetricsovertime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b47aa990",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "from torch.optim.lr_scheduler import StepLR\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import transforms, datasets\n",
-    "from torchvision.transforms import v2\n",
+    "from torchvision.transforms import v2 as v2\n",
     "from timm import create_model"
    ]
   },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "93fffcbc",
    "metadata": {},
    "outputs": [
@@ -269,8 +269,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\liamcee\\AppData\\Local\\Temp\\ipykernel_48740\\1127823107.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load('FRswin_weights(R)(A)final.pth'))\n"
+      "C:\\Users\\liamcee\\AppData\\Local\\Temp\\ipykernel_2528\\3480211936.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load('best_swin_FR(A)final.pth'))\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "model = create_model('swin_tiny_patch4_window7_224', pretrained=False, num_classes=num_classes)\n",
-    "model.load_state_dict(torch.load('FRswin_weights(R)(A)final.pth'))\n",
+    "model.load_state_dict(torch.load('best_swin_FR(A)final.pth'))\n",
     "model = model.to(device)"
    ]
   },
@@ -372,11 +372,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d2dfef99",
+   "execution_count": 6,
+   "id": "da8967b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transform = v2.Compose([\n",
+    "    v2.ToImage(),\n",
+    "    v2.Resize((224, 224)),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
+    "    v2.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "dataset = datasets.ImageFolder(root='C:/Users/liamcee/Documents/farbruh/rafdb/train', transform=transform)\n",
+    "loader = torch.utils.data.DataLoader(dataset, batch_size=1, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d2dfef99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average inference time per image: 0.013002 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "inference_times = []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for images, _ in loader:\n",
+    "        images = images.to(device)\n",
+    "        \n",
+    "        start_time = time.time()\n",
+    "        _ = model(images)\n",
+    "        end_time = time.time()\n",
+    "        \n",
+    "        inference_time = end_time - start_time\n",
+    "        inference_times.append(inference_time)\n",
+    "\n",
+    "# Report average time\n",
+    "average_time = sum(inference_times) / len(inference_times)\n",
+    "print(f\"Average inference time per image: {average_time:.6f} seconds\")\n"
+   ]
   }
  ],
  "metadata": {
